kubernetes/apps/base/kasm-brave/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kasm-brave
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`brave.${cluster_domain}`)
      kind: Rule
      services:
        - name: kasm-brave
          port: 6901
          scheme: https
          serversTransport: kasm-skip-verify
